--- a/SuperHeroComics-Surf/SuperHeroComics-Surf/User Stories/DetailSuperHero/View/Adapter/Cells/DetailSuperHeroParametersTableViewCell/DetailSuperHeroParametersTableViewCell.xib
+++ b/SuperHeroComics-Surf/SuperHeroComics-Surf/User Stories/DetailSuperHero/View/Adapter/Cells/DetailSuperHeroParametersTableViewCell/DetailSuperHeroParametersTableViewCell.xib
@@ -11,35 +11,52 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="295" id="KGk-i7-Jjw" customClass="DetailSuperHeroParametersTableViewCell" customModule="SuperHeroComics_Surf" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="295"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="217"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="295"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" userLabel="Main View">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="217"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRn-M1-p7K">
-                        <rect key="frame" x="139" y="7" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9Y-D9-hVR">
-                        <rect key="frame" x="16" y="36" width="288" height="251"/>
-                    </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e53-gM-ZTs" userLabel="Parameters View">
+                        <rect key="frame" x="9" y="5" width="302" height="203"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRn-M1-p7K">
+                                <rect key="frame" x="123.5" y="0.0" width="55" height="23.5"/>
+                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9Y-D9-hVR">
+                                <rect key="frame" x="8" y="31.5" width="286" height="163.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="163.5" id="s9c-av-nGL"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="mYY-2L-xSD"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="l9Y-D9-hVR" secondAttribute="bottom" constant="8" id="AgX-Hn-r6P"/>
+                            <constraint firstItem="l9Y-D9-hVR" firstAttribute="leading" secondItem="e53-gM-ZTs" secondAttribute="leading" constant="8" id="INC-uL-9YL"/>
+                            <constraint firstItem="l9Y-D9-hVR" firstAttribute="top" secondItem="YRn-M1-p7K" secondAttribute="bottom" constant="8" id="K7h-tL-jVj"/>
+                            <constraint firstItem="YRn-M1-p7K" firstAttribute="top" secondItem="e53-gM-ZTs" secondAttribute="top" id="Suk-t2-ga1"/>
+                            <constraint firstItem="YRn-M1-p7K" firstAttribute="centerX" secondItem="e53-gM-ZTs" secondAttribute="centerX" id="aYM-d7-LLL"/>
+                            <constraint firstAttribute="trailing" secondItem="l9Y-D9-hVR" secondAttribute="trailing" constant="8" id="lwe-Yk-XhH"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="YRn-M1-p7K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="CCY-Dy-lKT"/>
-                    <constraint firstAttribute="trailing" secondItem="l9Y-D9-hVR" secondAttribute="trailing" constant="16" id="Sx8-67-42A"/>
-                    <constraint firstAttribute="bottom" secondItem="l9Y-D9-hVR" secondAttribute="bottom" constant="8" id="Vd9-FH-R6x"/>
-                    <constraint firstItem="l9Y-D9-hVR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="jhJ-sh-Fg9"/>
-                    <constraint firstItem="YRn-M1-p7K" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="pxJ-J1-mNQ"/>
-                    <constraint firstItem="l9Y-D9-hVR" firstAttribute="top" secondItem="YRn-M1-p7K" secondAttribute="bottom" constant="8" id="zAm-GT-G4w"/>
+                    <constraint firstItem="e53-gM-ZTs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="9iL-Ec-rJ0"/>
+                    <constraint firstAttribute="bottom" secondItem="e53-gM-ZTs" secondAttribute="bottom" constant="9" id="9nW-6L-tZ3"/>
+                    <constraint firstItem="e53-gM-ZTs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="IcQ-9J-nM2"/>
+                    <constraint firstAttribute="trailing" secondItem="e53-gM-ZTs" secondAttribute="trailing" constant="9" id="gSq-HJ-gWZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="headerTitle" destination="YRn-M1-p7K" id="tfJ-Jh-Z49"/>
                 <outlet property="parameterStackView" destination="l9Y-D9-hVR" id="1xY-zw-BQ6"/>
+                <outlet property="parametersView" destination="e53-gM-ZTs" id="vsl-Bk-mUL"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="46.540178571428569"/>
         </tableViewCell>
