--- a/SuperHeroComics-Surf/SuperHeroComics-Surf/User Stories/DetailSuperHero/View/Adapter/Cells/DetailSuperHeroParametersTableViewCell/DetailSuperHeroParametersTableViewCell.xib
+++ b/SuperHeroComics-Surf/SuperHeroComics-Surf/User Stories/DetailSuperHero/View/Adapter/Cells/DetailSuperHeroParametersTableViewCell/DetailSuperHeroParametersTableViewCell.xib
@@ -21,16 +21,13 @@
                         <rect key="frame" x="9" y="5" width="302" height="203"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRn-M1-p7K">
-                                <rect key="frame" x="123.5" y="0.0" width="55" height="23.5"/>
+                                <rect key="frame" x="123.5" y="3" width="55" height="19.5"/>
                                 <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9Y-D9-hVR">
-                                <rect key="frame" x="8" y="31.5" width="286" height="163.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="163.5" id="s9c-av-nGL"/>
-                                </constraints>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="l9Y-D9-hVR">
+                                <rect key="frame" x="8" y="30.5" width="286" height="164.5"/>
                                 <viewLayoutGuide key="safeArea" id="mYY-2L-xSD"/>
                             </stackView>
                         </subviews>
@@ -39,7 +36,7 @@
                             <constraint firstAttribute="bottom" secondItem="l9Y-D9-hVR" secondAttribute="bottom" constant="8" id="AgX-Hn-r6P"/>
                             <constraint firstItem="l9Y-D9-hVR" firstAttribute="leading" secondItem="e53-gM-ZTs" secondAttribute="leading" constant="8" id="INC-uL-9YL"/>
                             <constraint firstItem="l9Y-D9-hVR" firstAttribute="top" secondItem="YRn-M1-p7K" secondAttribute="bottom" constant="8" id="K7h-tL-jVj"/>
-                            <constraint firstItem="YRn-M1-p7K" firstAttribute="top" secondItem="e53-gM-ZTs" secondAttribute="top" id="Suk-t2-ga1"/>
+                            <constraint firstItem="YRn-M1-p7K" firstAttribute="top" secondItem="e53-gM-ZTs" secondAttribute="top" constant="3" id="Suk-t2-ga1"/>
                             <constraint firstItem="YRn-M1-p7K" firstAttribute="centerX" secondItem="e53-gM-ZTs" secondAttribute="centerX" id="aYM-d7-LLL"/>
                             <constraint firstAttribute="trailing" secondItem="l9Y-D9-hVR" secondAttribute="trailing" constant="8" id="lwe-Yk-XhH"/>
                         </constraints>
